--- a/package.json
+++ b/package.json
@@ -12,36 +12,48 @@
     "@expo-google-fonts/caveat": "^0.2.3",
     "@expo-google-fonts/creepster": "^0.2.3",
     "@expo-google-fonts/whisper": "^0.2.3",
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/config": "~9.0.0",
+    "@expo/metro-config": "~0.18.1",
+    "@expo/vector-icons": "^14.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
-    "expo": "~49.0.15",
-    "expo-av": "~13.4.1",
-    "expo-font": "~11.4.0",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^51.0.2",
+    "expo-av": "~14.0.4",
+    "expo-font": "~12.0.5",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "firebase": "^10.8.0",
+    "formik": "^2.4.5",
+    "metro-config": "^0.80.9",
+    "paystack-react-native": "^0.2.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-paystack-webview": "^4.1.4",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-video": "^2.3.1",
-    "react-native-video-player": "^0.14.0"
+    "react-native-video-player": "^0.14.0",
+    "react-native-webview": "13.8.6",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
